[metadata]
name = snowsession
author = Saša Mitrović
author_email = sasha.mitrovich@hotmail.com
description = Helper package to create Snowflake Snowpark sessions
long_description_content_type = text/markdown
url = https://github.com/sashamitrovich/snowsession
project_urls =
    Bug Tracker = https://github.com/sashamitrovich/snowsession/issues
    Changelog = https://github.com/sashamitrovich/snowsession/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = ==3.8.*

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    executable-name = snowsession.module:function
    gha_python_packaging_demo = snowsession.app:entry_point